--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delhi Flow Guide - Startup Compliance Simplified</title>
+    <title>Compliance Hub</title>
     <meta name="description" content="Streamline your startup's regulatory journey with AI-powered compliance management. Navigate licenses, permits, and documentation with ease." />
     <meta name="author" content="Delhi Flow Guide" />
 
