--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Streamline your startup's regulatory journey with AI-powered compliance management." />
     <meta name="twitter:image" content="/placeholder.svg" />
     
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.ico" />
   </head>
 
   <body>
